<resources>
    <string name="app_name">bitcoin wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="create_wallet">Create wallet</string>
    <string name="string_wallet_name_hint">Enter wallet name</string>
    <string name="submit">submit</string>
    <string name="next_step">next step</string>
    <string name="authentication_pin">PIN</string>
    <string name="authentication_fingerprint">Fingerprint</string>
    <string name="authentication_setup_title">Authentication</string>
    <string name="initialize_wallet">Initialize wallet</string>
    <string name="finish_setup">finish setup</string>
    <string name="send_bitcoin">send bitcoin</string>
    <string name="contacts">Contacts</string>
    <string name="address">Address</string>
    <string name="wallet_name">Wallet name</string>
    <string name="wallet_balance">Balance</string>
    <string name="add_new_contact">New contact</string>
    <string name="bitcoin_amount">bitcoin amount</string>
    <string name="receiver_address">receiver address</string>
    <string name="send">send</string>
    <string name="receive_transaction">Receive</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="transaction_history">Transaction history</string>
    <string name="send_transaction">Send</string>
    <string name="dashboard">Dashboard</string>
    <string name="hash">Hash</string>
    <string name="transaction_value">Value</string>
    <string name="confirmation_date">Confirmed</string>
</resources>
