<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authenticationsetup.AuthenticationSetupView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication_setup_title"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <RadioGroup
            android:id="@+id/rgAuthentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0">

        <RadioButton
                android:id="@+id/rbPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_pin"/>

        <RadioButton
                android:id="@+id/rbFingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_fingerprint"/>
    </RadioGroup>

    <Button
            android:id="@+id/btnInitializeWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialize_wallet"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintTop_toBottomOf="@+id/rgAuthentication"/>

</androidx.constraintlayout.widget.ConstraintLayout>