<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.sendtransaction.SendTransactionView">

    <EditText
            android:id="@+id/etBitcoinAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/bitcoin_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etReceiveAddress"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.029"/>

    <EditText
            android:id="@+id/etReceiveAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/receiver_address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.031"/>

    <Button
            android:id="@+id/btnSendTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etBitcoinAmount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.026"/>


</androidx.constraintlayout.widget.ConstraintLayout>