<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardView">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#000"/>

    <TextView
            android:id="@+id/lbAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/lbName"/>

    <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test address"
            app:layout_constraintStart_toEndOf="@+id/lbAddress"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.074"
            android:textIsSelectable="true"/>

    <TextView
            android:id="@+id/lbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test name"
            app:layout_constraintStart_toEndOf="@+id/lbName"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.049"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <TextView
            android:id="@+id/lbBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_balance"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbAddress"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test balance"
            app:layout_constraintStart_toEndOf="@+id/lbBalance"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.083"/>

    <Button
            android:id="@+id/btnSendBitcoin"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/send_bitcoin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbBalance"/>

    <Button
            android:id="@+id/btnContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSendBitcoin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="76dp"
            android:orientation="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>