<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        tools:context=".ui.ContainerActivity">

    <ImageView
            android:id="@+id/ivBitcoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bitcoin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.864"/>

    <Button
            android:id="@+id/btnCreateWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_wallet"
            android:textColor="#fff"
            android:padding="@dimen/padding_button"
            android:background="@drawable/custom_button_background"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3"/>

    <Button
            android:id="@+id/btnRestoreWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:background="@drawable/custom_button_background"
            android:padding="@dimen/padding_button"
            android:text="@string/restore_wallet"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateWallet"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_begin="384dp"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            app:layout_constraintGuide_begin="528dp"
            android:orientation="horizontal"/>

    <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_title"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:fontFamily="@font/secrcode"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"/>

</androidx.constraintlayout.widget.ConstraintLayout>